Updated dummy secret to check pull request auto-fail

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DUMMY_PASSWORD='BA5B@1VAUX&u7DE9hnLQ'
+DUMMY_PASSWORD='BA5B@1VAUX&u7DE9hnLQ3!#lld5'
 DUMMY_CONNECTION_STRING=server='mysqlserver;database=ContosoDB;UserID=sqluser;password=hL3ahpF^!e!2N9fI3@nvrFf0I&ZU2A1wxC59RME#DF2Mx$y0AKysXb6p6XHspv;'
