--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -17,3 +17,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Run Yelp's detect-secrets
         uses: RobertFischer/detect-secrets-action@v2.0.0
+        env:
+          DS_BASELINE_FILE: .secrets.baseline
+
