--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -1,22 +1,26 @@
-# This runs Yelp's 'detect-secrets': https://github.com/Yelp/detect-secrets/blob/master/README.md
-
-name: Secret Scan
+name: Scan Code for Secrets
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ main ]
+    - opened
+    - reopened
+    - ready_for_review
+    - synchronize
+  push:
+    branches:
+      - '**'
+    tags:
+      - '!**'
 
 jobs:
   check-for-secrets:
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Run Yelp's detect-secrets
         uses: RobertFischer/detect-secrets-action@v2.0.0
-        env:
-          DS_BASELINE_FILE: .secrets.baseline
-
+      - name: Commit back .secrets.baseline (if it was missing)
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "build(detect-secrets): Commit the newly-generated .secrets.baseline file"
