--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -19,3 +19,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "build(detect-secrets): Commit the newly-generated .secrets.baseline file"
+  env: 
+    DS_ADDL_ARGS: --all-files
