--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -9,15 +9,15 @@ on:
 
 jobs:
   check-for-secrets:
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Run Yelp's detect-secrets
-        uses: RobertFischer/detect-secrets-action@v2.0.0
-      - name: Commit back .secrets.baseline (if it was missing)
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "build(detect-secrets): Commit the newly-generated .secrets.baseline file"
-  env: 
-    DS_ADDL_ARGS: --all-files
+      - name: Setup Python
+        uses: actions/setup-python@v2.2.2
+        with: 
+          python-version: 3.10.0
+      - name: Install Detect Secrets
+        run: pip install detect-secrets
+      - name: Detect Secrets
+        run: git ls-files -z | xargs -0 detect-secrets-hook --baseline .secrets.baseline
