--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,3 @@
 CLIENT_ID=<YOUR_CLIENT_ID>
 CLIENT_SECRET=<YOUR_CLIENT_SECRET>
+ANOTHER_SECRET=kOuyF^5^8MmXXBo0FhrdqbuR96Fqu%$aYSxUnaj9zCLcFaeI42d89K*zbW1hX2
