--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Install Dependencies
         run: pip install detect-secrets
       - name: Detect Secrets against known baseline
-        run: git ls-files -z | xargs -0 detect-secrets-hook --baseline .secrets.baseline
+        run: git ls-files -z | xargs -0 detect-secrets-hook --verbose --baseline .secrets.baseline
