--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -21,3 +21,7 @@ jobs:
         run: pip install detect-secrets
       - name: Detect Secrets against known baseline
         run: git ls-files -z | xargs -0 detect-secrets-hook --verbose --baseline .secrets.baseline && cat .secrets.baseline
+      - name: Commit
+        run: |
+          git add .secrets.baseline
+          git commit -m "Adds baseline updates"
