--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -21,7 +21,7 @@ jobs:
         run: pip install detect-secrets
       - name: Detect Secrets against known baseline
         run: git ls-files -z | xargs -0 detect-secrets-hook --verbose --baseline .secrets.baseline
-      - name: Commit
-        run: |
-          git add .secrets.baseline
-          git commit -m "Adds baseline updates"
+      - name: Commit back .secrets.baseline (if it was missing)
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "build(detect-secrets): Commit the newly-generated .secrets.baseline file"
