--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Dependencies
         run: pip install detect-secrets
       - name: Detect Secrets against known baseline
-        run: git ls-files -z | xargs -0 detect-secrets-hook --verbose --baseline .secrets.baseline
+        run: git ls-files -z | xargs -0 detect-secrets-hook --baseline .secrets.baseline
       - name: Commit back .secrets.baseline (if it was missing)
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
