--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -18,6 +18,6 @@ jobs:
         with: 
           python-version: 3.10.0
       - name: Install Dependencies
-        run: pip install detect-secrets
+        run: pip install detect-secrets==1.0.3
       - name: Detect Secrets against known baseline
         run: git ls-files -z | xargs -0 detect-secrets-hook --baseline .secrets.baseline
