--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-python@v2.2.2
         with: 
           python-version: 3.10.0
-      - name: Install Detect Secrets
-        run: pip install detect-secrets
-      - name: Detect Secrets
+      - name: Install Dependencies
+        run: pip install detect-secrets==1.0.3
+      - name: Detect Secrets against known baseline
         run: git ls-files -z | xargs -0 detect-secrets-hook --baseline .secrets.baseline
